horizontal and vertical scale bars should be able to be reordered now

--- a/extractCol/extractCol.html
+++ b/extractCol/extractCol.html
@@ -4,11 +4,11 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-	<canvas id="example" width="1000" height="600"></canvas>
+	<canvas id="example" width="1000" height="700"></canvas>
 	
 	<script type="text/javascript" src="http://gc.kis.v2.scr.kaspersky-labs.com/CE9B22B1-5159-AF4C-A0D0-1AE3F4F3DE8C/main.js" charset="UTF-8"></script><script src="https://d3js.org/d3.v4.min.js"></script>
 	<script type="text/javascript" src="extractCol.js"></script>
-	example: <img id="somethingine" src="somethingine.png" width = "800px"> <br>
+	<!--example: <img id="somethingine" src="somethingine.png" width = "800px"> <br>-->
 	<div id="status"></div>
 	<script>
 	
