--- a/extractCol/mbostockzoom.html
+++ b/extractCol/mbostockzoom.html
@@ -39,4 +39,4 @@ svg {
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/CE9B22B1-5159-AF4C-A0D0-1AE3F4F3DE8C/main.js" charset="UTF-8"></script><script src="https://d3js.org/d3.v4.min.js"></script>
 <script type="text/javascript" src="histo.js"></script>
-<script type="text/javascript" src="extractCol.js"></script>
+<!--script type="text/javascript" src="extractCol.js"></script-->
