--- a/extractCol/mbostockzoom.html
+++ b/extractCol/mbostockzoom.html
@@ -50,7 +50,7 @@ svg {
 <script type="text/javascript" src="picoModal-3.0.0.min.js"></script>
 <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/CE9B22B1-5159-AF4C-A0D0-1AE3F4F3DE8C/main.js" charset="UTF-8"></script><script src="https://d3js.org/d3.v4.min.js"></script>
 <script type="text/javascript" src="nearestColor.js"></script>
-<script type="text/javascript" src="histo.js"></script>
+<script type="text/javascript" src="histor.js"></script>
 <script>
 var nearest = nearestColor;
 var colorRef;
